[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-multipart = "0.7.2"
actix-web = "4.9.0"
futures = "0.3.31"
actix-cors = "0.6"
wasmtime = "29.0.1"
wasmtime-wasi = "29.0.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0"
tokio = "1.44.0"
